2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixes the bug for
	the simple values positions and the enable links in the static
	graph.
	
	Incidents: #536 and #535 from local tracker

2014-01-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_view.php: Add exception
	of field1 in recovery fields to the new alert view

	* include/functions_reporting.php
	mobile/operation/agents.php
	mobile/operation/tactical.php
	mobile/include/style/main.css: Improve tactical and
	agents view in mobile console

2014-01-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php,
	include/constants.php, include/functions_reporting.php: added
	constants and killed magic numbers and unicorns.
	
	* include/functions_modules.php: added function
	"modules_get_modules_in_group".

2014-01-21  Sergio Martin <sergio.martin@artica.es>

	* images/long_arrow.png
	godmode/alerts/alert_view.php
	godmode/alerts/alert_list.list.php
	include/styles/pandora.css: Added an advanced alert view
	with details, triggering conditions, actions escalation and
	actions fields including triggering, recovering and command preview

2014-01-20  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Changed the type of tnetwork_component.description to
	  TEXT. Fixes ticket #487.

2014-01-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/user.class.php,
	mobile/include/system.class.php: fixed SQL injection.
	
	Issue found by Lincoln, a member of Corelan Team

2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed group filter in report
	list view.

2014-01-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings and
	notices.
	
	Fixes: #2414
