@@ -1,5 +1,14 @@
 2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/reporting/map_builder.php,
+	godmode/reporting/visual_console_builder.data.php: fixed the access
+	to user with operator read or and operator write in all group into
+	the visualmaps.
+	
+	Incident: #538 from local tracker
+
+2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/reporting/visual_console_builder.editor.js,
 	include/functions_visual_map.php,
 	include/ajax/visual_console_builder.ajax.php: fixes the bug for
